# ocr-triage-c

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
bench/: bench_encoded.c  bench_raw.c
examples/: handoff_demo.c  triage_cli.c
include/: ocr_triage.h
src/: cpu.c  decode.c  internal.h  score.c  simd.c  thumbnail.c  triage.c
tests/: test_basic.c
